--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,10 +261,10 @@ body {
 
 .header-top .logo {
     margin-inline: auto;
-}
-
-.header-top .logo img {
-    max-width: 100px;
+    font-size: 2.5rem;
+    color: white;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
 }
 
 .header-btn-group {
@@ -584,6 +584,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-bottom-left-radius: 15px;
 }
 
 .package-card .card-content {
@@ -936,6 +937,12 @@ address {
  * responsive for larger than 580px screen
  */
 
+@media (max-width:580px) {
+    .header-top .logo {
+        font-size: 1rem;
+    }
+}
+
 @media (min-width: 580px) {
     /**
    * REUSED STYLE
@@ -967,9 +974,6 @@ address {
     }
     .helpline-box .icon-box {
         padding: 14px;
-    }
-    .header-top .logo img {
-        max-width: unset;
     }
     .search-btn {
         font-size: 30px;
@@ -1112,7 +1116,7 @@ address {
         grid-template-columns: 1.3fr 1.5fr 1fr;
     }
     .package-card .card-banner {
-        height: 100%;
+        max-height: 500px;
     }
     .package-card .card-content {
         padding: 40px;
@@ -1244,7 +1248,7 @@ address {
    * HERO
    */
     .hero .container {
-        max-width: 740px;
+        max-width: 990px;
     }
     /**
    * TOUR SEARCH
