--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -762,6 +762,10 @@ body {
 
 .footer-brand .logo {
     margin-bottom: 20px;
+    font-size: 2.5rem;
+    color: white;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
 }
 
 .footer-text {
